# RealSurvey

./: .gitattributes  .gitignore  README.md  RealSurvey.sln
Analysis/: .RData  .Rhistory  CrossList.htm  CrossList.xlsx  Group.tsv  GroupCross.tsv  Linux.tsv  LinuxCross.tsv  OSX.tsv  OsxCross.tsv  TestEnv.tsv  X64Windows.tsv  X86Windows.tsv  difference_svy.R  hoge.txt  lang c.txt  langcCross.tsv  macOS.tsv  macOsCross.tsv  output.tsv  svy_script.R  x64WinCross.tsv  x86WinCross.tsv
Analyze/: Analyze.csproj  Comparator.cs  CrossChecker.cs  DataStrageManager.cs  DifferenceAnalyzer.cs  NameBuilder.cs  Program.cs  ReportWriter.cs  Result.cs  ResultLoader.cs  Session.cs
CLion/: CMakeLists.txt  e_rem_pio2.c  input_parameters.c  input_parameters.h  k_cos.c  k_rem_pio2.c  k_sin.c  k_tan.c  main.c  my_math.h  s_copysign.c  s_cos.c  s_fabs.c  s_floor.c  s_scalbn.c  s_sin.c  s_tan.c
CLion/Original/: e_acos.c  e_acosh.c  e_asin.c  e_atan2.c  e_atanh.c  e_cosh.c  e_exp.c  e_fmod.c  e_gamma.c  e_gamma_r.c  e_hypot.c  e_j0.c  e_j1.c  e_jn.c  e_lgamma.c  e_lgamma_r.c  e_log.c  e_log10.c  e_pow.c  e_rem_pio2.c  e_remainder.c  e_scalb.c  e_sinh.c  e_sqrt.c  fdlibm.h  index  k_cos.c  k_rem_pio2.c  k_sin.c  k_standard.c  k_tan.c  s_asinh.c  s_atan.c  s_cbrt.c  s_ceil.c  s_copysign.c  s_cos.c  s_erf.c  s_expm1.c  s_fabs.c  (+41 more)
RealNumberBitViewer/: BitView.cs  Program.cs  RealNumberBitViewer.csproj
RealSurveyTest/: RadDegTest.cs  RealSurveyTest.csproj  TrigonometricTests.cs
Report/: DifferenceReport.md
SurveyGrocery/: Angle.cs  CpuInfo.cs  FixedAngles.cs  RuntimeEnvironment.cs  (+2 more)
(+14 files in other folders)
